--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>⚡!System</title>
-  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -22,7 +21,7 @@
   </canvas>
 
 
-  <script src="index.js"></script>
+  <script type="module" src="./src/main.ts"></script>
 </body>
 
 </html>
