Add code for grid rendering , add css nesting

--- a/index.html
+++ b/index.html
@@ -8,18 +8,15 @@
 </head>
 
 <body>
-  <header class="anomaly-header">
+  <header id="anomaly-header">
     <p>
       Unknown anomaly detected. 
-      <span class="anomaly-header__warningText">Beware</span>.
+      <span class="warningText">Beware</span>.
     </p>
-    <button class="anomaly-header__exit-btn">X</button>
+    <button class="exit-btn">X</button>
   </header>
 
-
-  <canvas>
-  </canvas>
-
+  <canvas id="main-canvas" class="canvas"></canvas>
 
   <script type="module" src="./src/main.ts"></script>
 </body>
