repair header css

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 
 <body>
-  <header id="anomaly-header">
+  <header class="anomaly-header">
     <p>
       Unknown anomaly detected. 
-      <span class="warningText">Beware</span>.
+      <span class="warning-text">Beware</span>.
     </p>
     <button class="exit-btn">X</button>
   </header>
